# Programming_lab5

./: .clang-format  .gitignore  .gitmodules  1  2  3  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Doxyfile  README.md  \  cock.json  conanfile.txt  main.cpp
.cache/clangd/index/: console_reader.cpp.C76B96763D702D57.idx  main.cpp.7B0D2C4E66405A25.idx  main.cpp.AE6FECB3EB5E2487.idx  person.cpp.1401920904316BAC.idx  program.cpp.D5F1E347A5795916.idx  serializer.cpp.14AFCA95C4C4F064.idx
include/backend/: colection_manager.hpp  collection_serializer.hpp  date_manager.hpp  id_manager.hpp  person_collection_command_handler.hpp  router.hpp  server.hpp  session.hpp  session_controler.hpp
include/commands/: add_command.h  command.h  commands.h
include/common/: colection_manager.h  command_call_request.hpp  command_manager.h  console_io.h  date_manager.h  file_io.h  from_to_json.h  from_to_json.hpp  id_manager.h  io_interface.h  io_manager.h  json_person_vector_serializer.h  response.hpp  serializer.h  type_defs.hpp  validators.hpp
include/common/exeptions/: program_terminate_exeption.hpp
include/common/interface/: io_interface.hpp  person_collection_service.hpp  reader.hpp
include/common/structures/: collection_info.hpp  color.hpp  coordinate.hpp  country.hpp  location.hpp  person.hpp  person_precursor.hpp
include/forms/: coordinate_form.h  form.h  location_form.h  person_form.h
include/frontend/: command_manager.hpp  console_io.hpp  file_io.hpp  io_manager.hpp  person_collection_client.hpp  program.hpp  reader.hpp  reader_writer_types.hpp  reqest_sender.hpp  writer.hpp
include/frontend/commands/: add_command.hpp  add_if_max_command.hpp  add_if_min_command.hpp  clear_command.hpp  command.hpp  commands.hpp  execute_script_command.hpp  exit_command.hpp  filter_less_than_height_command.hpp  group_counting_by_name_command.hpp  help_command.hpp  info_command.hpp  (+6 more)
include/interface/: command.h  io_interface.h  reader.h  serializer.h  writer.h
include/structures/: collection_info.h  color.h  coordinate.h  country.h  location.h  person.h  person_precursor.h
project/common/: CMakeLists.txt
project/frontend/: CMakeLists.txt
project/frontend/include/commands/: add_command.h  command.h  help_command.h
project/frontend/include/forms/: form.h  person_form.h
project/frontend/include/input_output/: console_io.h  file_io.h  io_manager.h
project/frontend/include/interface/: i_reader.h
src/: main  main.cpp  person.cpp  program.cpp
src/backend/: colection_manager.cpp  collection_serializer.cpp  date_manager.cpp  id_manager.cpp  main.cpp  person_collection_command_handler.cpp  server.cpp  session_controler.cpp
src/commands/: commands.cpp
src/common/: colection_manager.cpp  command_manager.cpp  console_io.cpp  date_manager.cpp  file_io.cpp  from_to_json.cpp  id_manager.cpp  io_manager.cpp  json_person_vector_serializer.cpp  response.cpp  validators.cpp
src/forms/: coordinate_form.cpp  form.cpp  location_form.cpp  person_form.cpp
src/frontend/: command_manager.cpp  console_io.cpp  file_io.cpp  io_manager.cpp  main.cpp  person_collection_client.cpp  program.cpp  reader.cpp  request_sender.cpp  writer.cpp
(+69 files in other folders)
